# visual-search-new

./: .gitignore  API_EXAMPLES.md  ARCHITECTURE.md  CDN_DOWNLOAD_GUIDE.md  DEPLOYMENT.md  DOCS_SUMMARY.md  Makefile  QUICK_DOWNLOAD.md  README.md  RESTART_GUIDE.md  TESTING.md  WEBHOOK_SETUP.md  check_system.sh  docker-compose.yml  download_cdn.py  download_from_cdn_api.py  download_from_s3.py  download_log.txt  explore_s3.py  pyproject.toml  start.sh  test_cdn_structure.py  test_clip_gpu.py  test_clip_stage3.py  test_db_stage2.py
app/: __init__.py  config.py
app/api/: __init__.py  main.py
app/db/: README.md  __init__.py  postgres.py  qdrant.py
app/middleware/: __init__.py  logging.py
app/models/: README.md  __init__.py  clip_model.py
app/schemas/: product.py  search.py  webhook.py
app/utils/: __init__.py  bakai_cdn_client.py  bakai_s3_client.py  image_processing.py  logger.py  metrics.py  (+1 more)
examples/: clip_embedder_usage.py  database_usage_example.py
scripts/: download_and_index_local.py  download_cdn_images_simple.py  download_images_direct_from_cdn_api.py  download_images_from_cdn.py  explore_product_images.py  index_existing_products.py  init.sql  init_databases.py  load_demo_products.py  load_sample_data.py  quick_index_qdrant.py  reindex_qdrant.py  sync_images_from_s3.py  sync_images_from_s3_optimized.py  test_bakai_auth.py  test_bakai_cdn.py  test_bakai_s3.py  test_complete_system.py  test_monitoring.py  test_search_api.py  test_visual_search.py  test_webhook_local.py
tests/: __init__.py  test_api.py  test_clip.py  test_clip_model.py  test_database_modules.py  test_e2e.py  test_monitoring.py  test_visual_search.py
(+10 files in other folders)
